--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="hero-content">
             <img src="images/profile-picture.jpg" alt="Darieus Zagara II" class="profile-picture">
             <h1>Darieus Zagara II</h1>
-            <p class="tagline">Communications and Digital Marketing | Full Stack Developer | Data Analyst | SCRUM Master</p>
+            <p class="tagline">Communications and Digital Marketing | Full Stack Development | Data Analysis | SCRUMr</p>
             <div class="social-links">
                 <a href="www.linkedin.com/in/darieus-zagara-2823b9a2"><i class="fab fa-linkedin"></i></a>
                 <a href="mailto:darieuszagara@yahoo.com"><i class="fas fa-envelope"></i></a>
@@ -46,8 +46,8 @@
                         <h3>Technical</h3>
                         <ul>
                             <li>Full Stack Development</li>
-                            <li>Python & JavaScript</li>
-                            <li>Data Analysis (Python & R)</li>
+                            <li>JavaScript, Python, R, SQL, and more</li>
+                            <li>Data Analysis</li>
                             <li>Web App Development</li>
                         </ul>
                     </div>
