--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="hero-content">
             <img src="images/profile-picture.jpg" alt="Darieus Zagara II" class="profile-picture">
             <h1>Darieus Zagara II</h1>
-            <p class="tagline">Communications and Digital Marketing | Full Stack Development | Data Analysis | SCRUMr</p>
+            <p class="tagline">Communications and Digital Marketing | Full Stack Development | Data Analysis | SCRUM</p>
             <div class="social-links">
                 <a href="www.linkedin.com/in/darieus-zagara-2823b9a2"><i class="fab fa-linkedin"></i></a>
                 <a href="mailto:darieuszagara@yahoo.com"><i class="fas fa-envelope"></i></a>
