Update work page content

--- a/work.html
+++ b/work.html
@@ -454,7 +454,7 @@
                                 <div class="work-content">
                                     <span class="work-type">Emaail Marketing</span>
                                     <div class="title-and-tags">
-                                        <h3>Multiple Clients</h3>
+                                        <h3>Email Marketing & Automation</h3>
                                         <div class="work-tags">
                                             <span class="work-tag" data-category="strategy">Strategy Development</span>
                                             <span class="work-tag" data-category="marketing">Ad Buys</span>
